packages/next-swc/crates/core/tests/errors/next-font-downloaders/not-const/output.js
import inter1 from '@next/google-fonts?{"font":"Inter","variant":"400"}';
import inter2 from '@next/google-fonts?{"font":"Inter","variant":"400"}';
var i = 10;
var i2 = 20;
